--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-slideshow-image": "^1.3.1",
     "redux": "^4.0.4",
     "styled-components": "^4.4.1"
   },
